[gd_scene load_steps=14 format=3 uid="uid://dds6oh7t51mq"]

[ext_resource type="Texture2D" uid="uid://2ire2axqcwhv" path="res://Assets/CC_Assets/人物Assets/Butcher_2_idle_anim_16x16.png" id="1_btomo"]
[ext_resource type="Script" path="res://Script/butcher_1.gd" id="1_mk5rp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pyk7g"]
atlas = ExtResource("1_btomo")
region = Rect2(288, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ho8o1"]
atlas = ExtResource("1_btomo")
region = Rect2(304, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ok1i4"]
atlas = ExtResource("1_btomo")
region = Rect2(320, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eferc"]
atlas = ExtResource("1_btomo")
region = Rect2(336, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4vj8u"]
atlas = ExtResource("1_btomo")
region = Rect2(352, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ivpg"]
atlas = ExtResource("1_btomo")
region = Rect2(368, 0, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ik3hb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pyk7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ho8o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ok1i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eferc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4vj8u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ivpg")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t78qf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rp2xj"]
radius = 14.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yw3od"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="LabelSettings" id="LabelSettings_i5huu"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[node name="Butcher_1" type="Node2D"]
script = ExtResource("1_mk5rp")
dialogue = Array[String](["", "Butcher_1: You’d study the cuts like it was some kind of art.", "Player: There was something intricate about it all.", "Butcher_1: Nice to know someone appreciated the work behind it."])

[node name="Butcher_1" type="CharacterBody2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Butcher_1"]
sprite_frames = SubResource("SpriteFrames_ik3hb")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Butcher_1"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_t78qf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 60)
shape = SubResource("CircleShape2D_rp2xj")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_rp2xj")

[node name="Memory11" type="Marker2D" parent="."]
position = Vector2(36, 1)

[node name="DialogueBox" type="CanvasLayer" parent="."]
visible = false

[node name="PanelContainer" type="PanelContainer" parent="DialogueBox"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -105.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_yw3od")

[node name="Text" type="Label" parent="DialogueBox/PanelContainer"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Hi! How are you?"
label_settings = SubResource("LabelSettings_i5huu")
autowrap_mode = 3
text_direction = 1

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
